--- a/slides/javascript/index.html
+++ b/slides/javascript/index.html
@@ -9,9 +9,9 @@
     <meta name="company" content="www.goebl.com"/>
     <!-- extensions -->
     <meta name="transitions" content="no"/>
-    <script src="http://hgoebl.github.com/nerdshow/rt/jquery/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="http://hgoebl.github.com/nerdshow/rt/s5/ui/common/s5.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://hgoebl.github.com/nerdshow/rt/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
+    <script src="http://hgoebl.github.io/nerdshow/rt/jquery/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="http://hgoebl.github.io/nerdshow/rt/s5/ui/common/s5.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://hgoebl.github.io/nerdshow/rt/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
     <style>
         img.scaled-centered {
             max-width:100%;
@@ -71,7 +71,7 @@
 
 <ul>
 <li>Heinrich Göbl</li>
-<li>Day job as JEE programmer at <a href="http://www.agenda-software.de/">AGENDA Software GmbH</a></li>
+<li>IT-Freelancer (Architecture, Software-Development)</li>
 <li>Focus on Java EE</li>
 <li><span style="color: #277633; font-weight: bold">&ldquo;I like JavaScript ;-)&rdquo;</span></li>
 </ul>
@@ -81,33 +81,6 @@
 
 </p>
 </td></tr></table>
-
-</div>
-
-<div class="slide">
-
-<h1>JUGM Survey (1)</h1>
-<div style="background: url('media/weight-javascript.png') no-repeat; background-position: center center; height: 100%"></div>
-
-</div><div class="slide" style="">
-
-<h1>JUGM Survey (2)</h1>
-<div style="background: url('media/weight-nodejs.png') no-repeat; background-position: center center; height: 100%"></div>
-
-</div><div class="slide" style="">
-
-<h1>JUGM Survey (3)</h1>
-<div style="background: url('media/weight-mongodb.png') no-repeat; background-position: center center; height: 100%"></div>
-
-</div><div class="slide" style="">
-
-<h1>JUGM Survey (4)</h1>
-<div style="background: url('media/javascript-items.png') no-repeat; background-position: center center; height: 100%"></div>
-
-</div><div class="slide" style="">
-
-<h1>JUGM Survey (5)</h1>
-<div style="background: url('media/javascript-expert-level.png') no-repeat; background-position: center center; height: 100%"></div>
 
 </div>
 
@@ -1655,14 +1628,6 @@ Stoyan Stefanov, O&#39;Reilly, 2010</li>
 </div>
 <div class="slide">
 
-<h1>Book Lottery</h1>
-<p><img src="media/crockford-the-good-parts.jpg" class="scaled-centered">
-
-</p>
-</div>
-
-<div class="slide">
-
 <h1>Questions?</h1>
 <p><img src="media/questions.jpg" class="scaled-centered">
 
@@ -2065,11 +2030,11 @@ for (i = 0; i &lt; 10; i++) {
 <script>
     window.hijs = '.lang-javascript';
 </script>
-<script src="http://hgoebl.github.com/nerdshow/rt/hijs/hijs.js"></script>
+<script src="http://hgoebl.github.io/nerdshow/rt/hijs/hijs.js"></script>
 <script>
 
     $(function () {
-        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.com/nerdshow/rt/hijs/my-hijs.css"/>').appendTo('head');
+        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.io/nerdshow/rt/hijs/my-hijs.css"/>').appendTo('head');
     });
 
 </script>
