--- a/slides/mongodb/index.html
+++ b/slides/mongodb/index.html
@@ -9,9 +9,9 @@
     <meta name="company" content="www.goebl.com"/>
     <!-- extensions -->
     <meta name="transitions" content="no"/>
-    <script src="http://hgoebl.github.com/nerdshow/rt/jquery/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="http://hgoebl.github.com/nerdshow/rt/s5/ui/common/s5.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://hgoebl.github.com/nerdshow/rt/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
+    <script src="http://hgoebl.github.io/nerdshow/rt/jquery/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="http://hgoebl.github.io/nerdshow/rt/s5/ui/common/s5.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://hgoebl.github.io/nerdshow/rt/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
     <style>
         img.scaled-centered {
             max-width:100%;
@@ -71,9 +71,9 @@
 
 <ul>
 <li>Heinrich Göbl</li>
-<li>Day job as JEE programmer at <a href="http://www.agenda-software.de/">AGENDA Software GmbH</a></li>
+<li>IT-Freelancer (Architecture, Software-Development)</li>
 <li>Focus on Java EE</li>
-<li><span style="color: #277633; font-weight: bold">&ldquo;Sorry, no production experience w/ MongoDB&rdquo;</span></li>
+<li><span style="color: #277633; font-weight: bold">&ldquo;MongoDB is the backend db for my Android apps&rdquo;</span></li>
 </ul>
 </td><td style="padding-left: 1em">
 
@@ -517,11 +517,11 @@ Kyle Banker, Manning Publications, 2012</li>
 <script>
     window.hijs = '.lang-javascript';
 </script>
-<script src="http://hgoebl.github.com/nerdshow/rt/hijs/hijs.js"></script>
+<script src="http://hgoebl.github.io/nerdshow/rt/hijs/hijs.js"></script>
 <script>
 
     $(function () {
-        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.com/nerdshow/rt/hijs/my-hijs.css"/>').appendTo('head');
+        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.io/nerdshow/rt/hijs/my-hijs.css"/>').appendTo('head');
     });
 
 </script>
