upgrade to nerdshow@0.3.0

--- a/slides/index-qr.html
+++ b/slides/index-qr.html
@@ -1,10 +1,10 @@
 <html><head><title>Slides</title></head><body>
 <a href='javascript/'>JavaScript</a>
-<a href='/nerdshow/rc/remote.html?/javascript'><img src='qrcode-javascript.png'/></a>
+<a href='/nerdshow/rc/?/javascript'><img src='qrcode-javascript.png'/></a>
 <br><br><br><br>
 <a href='nodejs/'>Node.js</a>
-<a href='/nerdshow/rc/remote.html?/nodejs'><img src='qrcode-nodejs.png'/></a>
+<a href='/nerdshow/rc/?/nodejs'><img src='qrcode-nodejs.png'/></a>
 <br><br><br><br>
 <a href='mongodb/'>MongoDB</a>
-<a href='/nerdshow/rc/remote.html?/mongodb'><img src='qrcode-mongodb.png'/></a>
+<a href='/nerdshow/rc/?/mongodb'><img src='qrcode-mongodb.png'/></a>
 </body></html>
