--- a/slides/javascript/index.html
+++ b/slides/javascript/index.html
@@ -9,9 +9,7 @@
     <meta name="company" content="www.goebl.com"/>
     <!-- extensions -->
     <meta name="transitions" content="no"/>
-    <script src="http://hgoebl.github.io/nerdshow/rt/jquery/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="http://hgoebl.github.io/nerdshow/rt/s5/ui/common/s5.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://hgoebl.github.io/nerdshow/rt/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
+    <link rel="stylesheet" href="http://hgoebl.github.io/nerdshow/rt/0.3.0/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
     <style>
         img.scaled-centered {
             max-width:100%;
@@ -41,9 +39,22 @@
             color: #339;
             background: #d0dafd;
         }
+        #loading {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background-image: url('http://hgoebl.github.io/nerdshow/rt/0.3.0/s5/ui/default/preloaders.gif');
+            background-repeat:no-repeat;
+            background-position: center center;
+        }
+        .presentation {
+            display: none;
+        }
     </style>
 </head>
 <body>
+<div id="loading"></div>
 <div class="layout">
     <div id="header"></div>
     <!-- div id="footer">
@@ -2027,14 +2038,17 @@ for (i = 0; i &lt; 10; i++) {
 
 
 </div>
+<script src="http://hgoebl.github.io/nerdshow/rt/0.3.0/jquery/jquery-1.11.0.min.js" type="text/javascript"></script>
+<script src="http://hgoebl.github.io/nerdshow/rt/0.3.0/hammer/hammer-1.0.6.min.js" type="text/javascript"></script>
+<script src="http://hgoebl.github.io/nerdshow/rt/0.3.0/s5/ui/common/s5.js" type="text/javascript"></script>
 <script>
     window.hijs = '.lang-javascript';
 </script>
-<script src="http://hgoebl.github.io/nerdshow/rt/hijs/hijs.js"></script>
+<script src="http://hgoebl.github.io/nerdshow/rt/0.3.0/hijs/hijs.js"></script>
 <script>
 
     $(function () {
-        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.io/nerdshow/rt/hijs/my-hijs.css"/>').appendTo('head');
+        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.io/nerdshow/rt/0.3.0/hijs/my-hijs.css"/>').appendTo('head');
     });
 
 </script>
