--- a/slides/mongodb/index.html
+++ b/slides/mongodb/index.html
@@ -9,7 +9,7 @@
     <meta name="company" content="www.goebl.com"/>
     <!-- extensions -->
     <meta name="transitions" content="no"/>
-    <link rel="stylesheet" href="http://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
+    <link rel="stylesheet" href="https://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/advanced/theme.css" type="text/css" title="advanced" media="screen"/>
     <style>
         img.scaled-centered {
             max-width:100%;
@@ -44,7 +44,7 @@
             width: 100%;
             height: 100%;
             z-index: 9999;
-            background-image: url('http://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/default/preloaders.gif');
+            background-image: url('https://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/default/preloaders.gif');
             background-repeat:no-repeat;
             background-position: center center;
         }
@@ -52,7 +52,7 @@
             display: none;
         }
     </style>
-    <script src="http://hgoebl.github.io/nerdshow/rt/0.4.0/jquery/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="https://hgoebl.github.io/nerdshow/rt/0.4.0/jquery/jquery-1.11.0.min.js" type="text/javascript"></script>
     
 </head>
 <body>
@@ -456,16 +456,16 @@ Kyle Banker, Manning Publications, 2012</li>
 
 
 </div>
-<script src="http://hgoebl.github.io/nerdshow/rt/0.4.0/hammer/hammer.min.js" type="text/javascript"></script>
-<script src="http://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/common/s5.js" type="text/javascript"></script>
+<script src="https://hgoebl.github.io/nerdshow/rt/0.4.0/hammer/hammer.min.js" type="text/javascript"></script>
+<script src="https://hgoebl.github.io/nerdshow/rt/0.4.0/s5/ui/common/s5.js" type="text/javascript"></script>
 <script>
     window.hijs = '.lang-javascript';
 </script>
-<script src="http://hgoebl.github.io/nerdshow/rt/0.4.0/hijs/hijs.js"></script>
+<script src="https://hgoebl.github.io/nerdshow/rt/0.4.0/hijs/hijs.js"></script>
 <script>
 
     $(function () {
-        $('<link rel="stylesheet" type="text/css" href="http://hgoebl.github.io/nerdshow/rt/0.4.0/hijs/my-hijs.css"/>').appendTo('head');
+        $('<link rel="stylesheet" type="text/css" href="https://hgoebl.github.io/nerdshow/rt/0.4.0/hijs/my-hijs.css"/>').appendTo('head');
     });
 
 </script>
